--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="shortcut icon" type="image/x-icon" href="loveLetter.ico" />
   <title>Love letter</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -53,7 +54,7 @@
 </head>
 <body>
 
-  <nav class="navbar col sm-1 navbar-inverse navbar-expand-lg navbar-dark bg-dark container-fluid sticky-top" style="margin-bottom: 1%;">
+  <nav class="navbar col sm-1 navbar-inverse navbar-expand-lg navbar-dark bg-dark container-fluid sticky-top" style="margin-bottom: 0.7%;">
     <div class="container-fluid ">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
